fix: table overflow, close #106

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -103,8 +103,16 @@
     }
 }
 
-.table-responsive {
-    padding-bottom: 120px;
+@media (max-width: 767px) {
+    .table-responsive .dropdown-menu {
+        position: static !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .table-responsive {
+        overflow: inherit;
+    }
 }
 
 @mixin _dark-yform-lang-tabs {
